Added game over mechanic
Achieved by either:
1. dying to an enemy
2. getting to the exit

Can either:
1. play again (restart app)
2. exit (close app)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,5 +18,7 @@
         </activity>
         <activity android:name=".CombatActivity" >
         </activity>
+        <activity android:name=".GameEndActivity" >
+        </activity>
     </application>
 </manifest>
