--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TitleScreenActivity"
+        <activity android:name=".controller.TitleScreenActivity"
                     android:screenOrientation="landscape"
                     android:configChanges="orientation">
             <intent-filter>
@@ -17,19 +17,19 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".CombatActivity"
+        <activity android:name=".controller.CombatActivity"
                   android:screenOrientation="landscape"
                   android:configChanges="orientation">
         </activity>
-        <activity android:name=".GameEndActivity"
+        <activity android:name=".controller.GameEndActivity"
                   android:screenOrientation="landscape"
                   android:configChanges="orientation">
         </activity>
-        <activity android:name=".LabyrinthActivity"
+        <activity android:name=".controller.LabyrinthActivity"
                   android:screenOrientation="landscape"
                   android:configChanges="orientation">
         </activity>
-        <activity android:name=".CreatePlayerActivity"
+        <activity android:name=".controller.CreatePlayerActivity"
                   android:screenOrientation="landscape"
                   android:configChanges="orientation" >
         </activity>
